harmadik heti házi, 3. feladat
